# sfyri

./: Cargo.toml  README
docs/: general.md  svc.md  thought_experiment_1.md
src/: clap.yml  cursor_set.rs  edit_event.rs  main.rs  view_type.rs
src/buffer/: apply_events.rs  buffer_controller.rs  buffer_state.rs  buffer_trait.rs  default_buffer.rs  edit_event.rs  mod.rs  wrapped_rope.rs
src/idgen/: mod.rs
src/interface/: interface_controller.rs  interface_msg.rs  interface_pilot.rs  interface_state.rs  interface_worker.rs  mod.rs
src/logger/: mod.rs  sfyri_logger.rs
src/sfyri_text/: mod.rs  sfyri_text_controller.rs  sfyri_text_pilot.rs  sfyri_text_state.rs  sfyri_text_view.rs
src/stextview/: mod.rs  text_view.rs  text_view_state.rs
src/svc/: mod.rs  simple_impl.rs
src/view/: mod.rs  view_controller.rs  view_trait.rs
